--- a/REPORT.ipynb
+++ b/REPORT.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try fitting a logistic regression model on the toy dataset."
+    "The code snipped below fits a logistic regression model on the toy dataset."
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interestingly, the features selected by CCM are precisely the features with greatest local relevance on the above sample. More analysis is necessary to determine if this is a reoccurring pattern. "
+    "Interestingly, the features selected by CCM are precisely the features with greatest local relevance on the above sample. More analysis is necessary to determine if this is a consistent pattern. "
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, let's compare our logistic regression model with a feedforward neural network with a bottleneck architecture."
+    "The code snipped below fits a feedforward neural network with a bottleneck architecture on the training data."
    ]
   },
   {
